Fixed all the bugs i had and finished the overflow, with the header being at the top,

--- a/projects/expenseTracker/expenses/main.css
+++ b/projects/expenseTracker/expenses/main.css
@@ -165,7 +165,6 @@ body {
   opacity: 0;
   cursor: pointer;
 }
-
 .datepicker > input[type="date"]::-webkit-calendar-picker-indicator {
   position: absolute;
   top: -150%;
@@ -205,6 +204,7 @@ form {
 
 table {
   display: table;
+
   flex-direction: column;
   width: 700px;
 
@@ -223,23 +223,31 @@ td {
   word-break: break-all;
 }
 
-th {
-  font-size: 22px;
-  color: var(--purple);
-}
-
-td {
-  color: var(--textWhite);
+thead tr th {
+  position: sticky;
+  top: 0;
 }
 
 tbody {
   color: var(--purple);
   display: table-row-group;
   vertical-align: middle;
-  overflow-y: auto;
-  max-height: 200px;
 }
 
+th {
+  font-size: 22px;
+  color: var(--purple);
+  background-color: var(--darker);
+}
+
+td {
+  color: var(--textWhite);
+}
+
+.tableScroll {
+  max-height: 500px;
+  overflow: auto;
+}
 .pending {
   color: var(--yellow);
 }
